package dev.cere.content.api.Genre;

public class GenreSimpleDto {
    private String name;

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }
}
